cleaning up warnings (#59)
* cleaning up warnings

* fixed deprecated newInstance()

---------

Co-authored-by: Josiah Pisciotta <462_josiah@chroniclogic.com>